fix: whitespace wrap for sentry

--- a/public/src/app/sentry/sentry.component.css
+++ b/public/src/app/sentry/sentry.component.css
@@ -36,3 +36,7 @@
   display: inline-block;
   vertical-align: middle;
 }
+
+.sentry-container {
+  white-space: nowrap;
+}
